finished we_offer

--- a/src/we_offer.html
+++ b/src/we_offer.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     //= template/header_we_offer.html
+    //= template/we_offer.html
     //= template/review.html
     //= template/footer.html
     //= template/scripts.html
